tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Navi - ID 19/Home BTN - ID 34.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="34" name="Home BTN"></ScriptReference>
	<ObjectList membercount="1">
		<Step id="1" name="Script ausführen" enable="True">
			<Options>64</Options>
			<ParameterValues membercount="2">
				<Parameter type="List">
					<List name="Aus Liste" value="1">
						<ScriptReference id="20" name="Logo BTN"></ScriptReference>
					</List>
				</Parameter>
				<Parameter type="Parameter">
					<Parameter></Parameter>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
