tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Navi - ID 19/Home Info BTN - ID 156.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="156" name="Home Info BTN"></ScriptReference>
	<ObjectList membercount="6">
		<Step id="79" name="Fenster fixieren" enable="True">
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="False">
			<Options>8</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="6" name="Syntax"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="6" name="Gehe zu Layout" enable="True">
			<Options>8</Options>
			<ParameterValues membercount="2">
				<Parameter type="LayoutReferenceContainer">
					<LayoutReferenceContainer value="5">
						<LayoutReference id="25" name="Home_Info"></LayoutReference>
					</LayoutReferenceContainer>
				</Parameter>
				<Parameter type="Animation">
					<Animation name="Ohne" value="0"></Animation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="30" name="Datensätze zeigen als" enable="True">
			<Options>2</Options>
			<ParameterValues membercount="1">
				<Parameter type="List">
					<List name="Als Liste anzeigen" value="2"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="31" name="Fenster anpassen" enable="True">
			<Options>2</Options>
			<ParameterValues membercount="1">
				<Parameter type="List">
					<List name="Alles anzeigen" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="30" name="Datensätze zeigen als" enable="True">
			<Options>2</Options>
			<ParameterValues membercount="1">
				<Parameter type="List">
					<List name="Als Formular anzeigen" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
