tests/snapshots/scripts/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/Navi - ID 19/Omit RecordNav BTN - ID 171.xml.snap
---
source: src/main.rs
expression: output_content
---
<Script>
	<ScriptReference id="171" name="Omit RecordNav BTN"></ScriptReference>
	<ObjectList membercount="27">
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20160603 MrW More intelligent"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="20151006 MrW Intelligent omit button"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="86" name="Fehleraufzeichnung setzen" enable="True">
			<Options>196608</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="True"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="85" name="AnwenderAbbruchZulassen setzen" enable="True">
			<Options>65536</Options>
			<ParameterValues membercount="1">
				<Parameter type="Boolean">
					<Boolean id="131072" value="False"></Boolean>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Parameter"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[_SP( 1 )]]></Text>
								<ChunkList hash="0833C8A527A8E2C55E64700265CC2606">
									<Chunk type="CustomFunctionRef">_SP</Chunk>
									<Chunk type="NoRef">( 1 )</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Param"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="68" name="Wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[/*_IsFindMode*/]]></Text>
							<ChunkList hash="2CB1401B56C3358DC99FE658BCBC95E1">
								<Chunk type="NoRef">/*_IsFindMode*/</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="25" name="Aktuellen Datens. ausschließen" enable="True">
		</Step>
		<Step id="125" name="Sonst, wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[_IsKeySHIFT]]></Text>
							<ChunkList hash="169BE26EC32C18978E67ADC61D28267D">
								<Chunk type="CustomFunctionRef">_IsKeySHIFT</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="27" name="Nur Ausgeschlossene anzeigen" enable="True">
		</Step>
		<Step id="125" name="Sonst, wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[_IsKeyALT UND NICHT _IsKeySHIFT]]></Text>
							<ChunkList hash="1F6C915BF6C7273A87FEB3F29C1C80C7">
								<Chunk type="CustomFunctionRef">_IsKeyALT</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FunctionRef">UND</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FunctionRef">NICHT</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="CustomFunctionRef">_IsKeySHIFT</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Remove this and rest"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[Hole( AnzahlGefundeneDatensätze ) - Hole( DatensatzPositionInErgebnismenge ) + 1]]></Text>
								<ChunkList hash="8A890B71B8FAC874C6FFAA7D42144687">
									<Chunk type="FunctionRef">Hole</Chunk>
									<Chunk type="NoRef">( </Chunk>
									<Chunk type="FunctionRef">AnzahlGefundeneDatensätze</Chunk>
									<Chunk type="NoRef"> ) - </Chunk>
									<Chunk type="FunctionRef">Hole</Chunk>
									<Chunk type="NoRef">( </Chunk>
									<Chunk type="FunctionRef">DatensatzPositionInErgebnismenge</Chunk>
									<Chunk type="NoRef"> ) + 1</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Rest"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="26" name="Mehrere ausschließen" enable="True">
			<Options>16512</Options>
			<ParameterValues membercount="2">
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[$Rest]]></Text>
							<ChunkList hash="C63C556C9CB9113409861FA9FE37A230">
								<Chunk type="VariableReference">$Rest</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="125" name="Sonst, wenn" enable="True">
			<Options>16384</Options>
			<ParameterValues membercount="1">
				<Parameter type="Calculation">
					<Calculation datatype="7" position="0">
						<Calculation>
							<Text><![CDATA[_IsKeyALT UND _IsKeySHIFT]]></Text>
							<ChunkList hash="0533B154449F34ADBCD868A6A964C21A">
								<Chunk type="CustomFunctionRef">_IsKeyALT</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="FunctionRef">UND</Chunk>
								<Chunk type="NoRef"> </Chunk>
								<Chunk type="CustomFunctionRef">_IsKeySHIFT</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<Options>4</Options>
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment value="Keep this and rest"></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="141" name="Variable setzen" enable="True">
			<Options>16388</Options>
			<ParameterValues membercount="1">
				<Parameter type="Variable">
					<value>
						<Calculation datatype="1" position="1">
							<Calculation>
								<Text><![CDATA[Hole( DatensatzPositionInErgebnismenge ) - 1]]></Text>
								<ChunkList hash="BC71CEC5B6F160FC859EC010865D59CD">
									<Chunk type="FunctionRef">Hole</Chunk>
									<Chunk type="NoRef">( </Chunk>
									<Chunk type="FunctionRef">DatensatzPositionInErgebnismenge</Chunk>
									<Chunk type="NoRef"> ) - 1</Chunk>
								</ChunkList>
							</Calculation>
						</Calculation>
					</value>
					<Name value="$Rest"></Name>
					<repetition></repetition>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="16" name="Gehe zu Datens./Abfrage/Seite" enable="True">
			<Options>2</Options>
			<ParameterValues membercount="1">
				<Parameter type="Records">
					<List name="Erste(r)" value="1"></List>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="26" name="Mehrere ausschließen" enable="True">
			<Options>16512</Options>
			<ParameterValues membercount="2">
				<Parameter type="Boolean">
					<Boolean type="Mit Dialog" id="128" value="False"></Boolean>
				</Parameter>
				<Parameter type="Calculation">
					<Calculation datatype="1" position="0">
						<Calculation>
							<Text><![CDATA[$Rest]]></Text>
							<ChunkList hash="C63C556C9CB9113409861FA9FE37A230">
								<Chunk type="VariableReference">$Rest</Chunk>
							</ChunkList>
						</Calculation>
					</Calculation>
				</Parameter>
			</ParameterValues>
		</Step>
		<Step id="69" name="Sonst" enable="True">
		</Step>
		<Step id="25" name="Aktuellen Datens. ausschließen" enable="True">
		</Step>
		<Step id="70" name="Ende (wenn)" enable="True">
		</Step>
		<Step id="89" name="# (Kommentar)" enable="True">
			<ParameterValues membercount="1">
				<Parameter type="Comment">
					<Comment></Comment>
				</Parameter>
			</ParameterValues>
		</Step>
	</ObjectList>
</Script>
